src/snapshots/afrotd__parser__tests__interpretation_8.3.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 4
text: Bei einem Ein-Punkt-Try wird Team A’s Kick geblockt. A2 recovert den Ball im Spielfeld jenseits der neutralen Zone.
ruling: "Der\nBall ist dort dead, wo er durch A2 recovert wurde. Der Try ist beendet."
