src/snapshots/afrotd__parser__tests__interpretation_8.3.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 5
text: "Bei einem Ein-Punkt-Try wird Team A’s Kick geblockt und der\nBall, der jenseits der neutralen Zone nicht berührt wird, (a) wird von B3\nan der B-1 recovert oder (b) berührt den Boden in Team B’s Endzone."
ruling: "(a) B3 kann den Ball advancen; (b) der Ball ist dead, der Try\nist beendet (Regel 8.3.1)."
