src/snapshots/afrotd__parser__tests__interpretation_8.3.2_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 7
text: "Bei einem Try fängt B1 Team A’s legalen Vorwärtspass in seiner Endzone ab. Er trägt den Ball über Team A’s Goalline und (a) es\nfoult niemand während des Laufes; (b) B3 clippt während des Laufes;\n(c) A2 foult während des Laufes."
ruling: "(a) Team B erhält zwei\nPunkte zuerkannt. (b) Keine Punkte, der Try ist beendet und die Strafe\nwird durch die Regel aufgehoben. (c) Team B erhält zwei Punkte zuerkannt und die Strafe wird durch die Regel aufgehoben (Regel 8.3.1 und\n8.3.4.a und 8.3.4.b)."
