src/snapshots/afrotd__parser__tests__interpretation_8.3.2_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 2
index: 8
text: Bei einem Try mufft A1 den Hand-zu-Hand-Snap vom Snapper und der Ball wird von A2 recovert und in die gegnerische Endzone getragen.
ruling: "Team A erhält zwei Punkte zuerkannt (Regel\n2.11.2)."
