src/snapshots/afrotd__parser__tests__interpretation_8.3.3_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 3
index: 2
text: Beide Teams foulen während des Try und Team B erlangte keinen Ballbesitz.
ruling: Wiederholung des Try vom Previous Spot.
