src/snapshots/afrotd__parser__tests__interpretation_8.3.3_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 3
index: 4
text: "Während eines Try foulen beide Teams, bevor Team B einen\nVorwärtspass abfängt. Während des Returns (a) clippt B23 oder (b) tackelt A18 den Ballträger, indem er dessen Helmgitter ergreift und daran\nzieht."
ruling: "In beiden Fällen heben sich die Fouls auf und der\nDown wird wiederholt."
