src/snapshots/afrotd__parser__tests__interpretation_8.3.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 8
  - 3
  - 4
index: 1
text: "B15 fängt Team A’s legalen Vorwärtspass (PAT-Versuch) ab und\nläuft zur Spielfeldmitte, wo er von A19 am Helmgitter ergriffen und getackelt wird."
ruling: Der Try ist vorüber und die Strafe wird durch die
